<resources>
    <string name="app_name">Hackathon22</string>

    <string name="no_internet_connection">Check internet connection!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="chats">Chats</string>
    <string name="search_friends">Search friends</string>
    <string name="profile">Profile</string>
    <string name="API_KEY">12243085829-b4grfg7t41m9k2u8nqg4f4sgoc7m60o2.apps.googleusercontent.com</string>
    <string name="back">Back</string>
    <string name="create_chat">Create chat</string>
    <string name="search">Search…</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="uid">Uid</string>
    <string name="user_details">User Details</string>
    <string name="user_image">User image</string>
    <string name="no_chats">No chats</string>
    <string name="no_user">No users</string>
    <string name="sort_arrow">Sort arrow</string>
    <string name="by_name">By name</string>
    <string name="by_last_message_time">By last message time</string>
    <string name="sort">Sort</string>
    <string name="log_out">Log out</string>
    <string name="send_file">Send file</string>
    <string name="enter_message">Enter message…</string>
    <string name="send">Send</string>
    <string name="image">Image</string>
    <string name="more">More</string>
    <string name="friends">Friends</string>
    <string name="enter_message_without_dots">Enter message</string>
</resources>