<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isVisible"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_sort_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnByName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:paddingEnd="6dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnByTimeLastMessage"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivByNameIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sort_arrow"
                android:src="@drawable/ic_sort_arrow_24" />

            <TextView
                android:id="@+id/tvByName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_name" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnByTimeLastMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:paddingEnd="6dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnByName"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivByTimeLastMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sort_arrow"
                android:src="@drawable/ic_sort_arrow_24" />

            <TextView
                android:id="@+id/tvByTimeLastMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_last_message_time" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
