<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/top_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground">

        <LinearLayout
            android:id="@+id/root_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/tvTitle"
                            style="@style/TextAppearance.Material3.TitleMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/chats" />

                        <ImageButton
                            android:id="@+id/ibSort"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginHorizontal="12dp"
                            android:background="@color/transparent"
                            android:contentDescription="@string/sort"
                            android:src="@drawable/ic_sort_24" />
                    </androidx.cardview.widget.CardView>

                    <include
                        android:id="@+id/include_sort"
                        layout="@layout/sort_container_view" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/emptyState"
                    style="@style/Theme.Hackathon22.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="8dp"
                    android:text="@string/no_chats"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_chats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_chat" />

            </FrameLayout>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>