<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/ibBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="12dp"
                        android:background="@color/transparent"
                        android:contentDescription="@string/back"
                        android:src="@drawable/ic_arrow_back_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilSearch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="6dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/bordered_view"
                        app:boxBackgroundMode="none"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:endIconMode="clear_text"
                        app:errorEnabled="false"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etSearch"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/search"
                            android:inputType="text"
                            android:padding="0dp"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFriends"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_friend" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/create_chat"
            android:src="@drawable/ic_add_24" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>