<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_details" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_margin="12dp"
            android:src="@drawable/portrait_placeholder"
            android:contentDescription="@null"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:maxImageSize="20dp"
            app:fabCustomSize="30dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@id/user_image"
            app:layout_constraintEnd_toEndOf="@id/user_image"
            app:srcCompat="@drawable/ic_image"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="18dp"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintTop_toBottomOf="@id/user_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintTop_toBottomOf="@id/name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/email_text"/>

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/uid_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uid"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintTop_toBottomOf="@id/email_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/uid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintTop_toBottomOf="@id/uid_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="?colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/tvAuth"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:textColor="@color/white"
                tools:text="Log in" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>